--- a/package.json
+++ b/package.json
@@ -23,20 +23,31 @@
 	"author": "Emeka Orji",
 	"license": "ISC",
 	"dependencies": {
+		"@types/multer": "^1.4.12",
+		"bcrypt": "^5.1.1",
+		"cookie-parser": "^1.4.7",
 		"cron": "^4.1.0",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.40.0",
 		"express": "^4.21.2",
-		"pg": "^8.13.3"
+		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.2",
+		"pg": "^8.13.3",
+		"validator": "^13.15.0",
+		"zod": "^3.24.2"
 	},
 	"bugs": {
 		"url": "https://github.com/emekaorji/sample-server/issues"
 	},
 	"homepage": "https://github.com/emekaorji/sample-server#readme",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/cookie-parser": "^1.4.8",
 		"@types/express": "^5.0.0",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^22.13.9",
 		"@types/pg": "^8.11.11",
+		"@types/validator": "^13.15.0",
 		"drizzle-kit": "^0.30.5",
 		"nodemon": "^3.1.9",
 		"rimraf": "^6.0.1",
