--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"db:drop": "drizzle-kit drop",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"test": "vitest run",
+		"test:watch": "vitest"
 	},
 	"repository": {
 		"type": "git",
@@ -47,11 +49,14 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^22.13.9",
 		"@types/pg": "^8.11.11",
+		"@types/supertest": "^6.0.3",
 		"@types/validator": "^13.15.0",
 		"drizzle-kit": "^0.30.5",
 		"nodemon": "^3.1.9",
 		"rimraf": "^6.0.1",
+		"supertest": "^7.1.0",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.8.2"
+		"typescript": "^5.8.2",
+		"vitest": "^3.1.1"
 	}
 }
