--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"multer": "^1.4.5-lts.2",
 		"pg": "^8.13.3",
 		"validator": "^13.15.0",
+		"ytdl-core": "^4.11.5",
 		"zod": "^3.24.2"
 	},
 	"bugs": {
