--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DATABASE_URL=postgresql://user:password@host:5432/dbname?sslmode=require
 # Server
 PORT=8000
 NODE_ENV=development
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:5173
 
 # Authentication
 JWT_SECRET=your_jwt_secret_key_here
