--- a/package.json
+++ b/package.json
@@ -15,28 +15,29 @@
 		"test": "vitest run",
 		"test:watch": "vitest"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/emekaorji/sample-server.git"
-	},
 	"keywords": [
 		"Premeee"
 	],
-	"author": "Emeka Orji",
+	"author": "Matthew Adebayo",
 	"license": "ISC",
 	"dependencies": {
+		"@distube/ytdl-core": "^4.16.10",
 		"@types/multer": "^1.4.12",
+		"@xenova/transformers": "^2.17.2",
 		"bcrypt": "^5.1.1",
 		"cookie-parser": "^1.4.7",
 		"cron": "^4.1.0",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.40.0",
 		"express": "^4.21.2",
+		"ffmpeg": "^0.0.4",
+		"ffmpeg-static": "^5.2.0",
+		"fluent-ffmpeg": "^2.1.3",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.2",
 		"pg": "^8.13.3",
+		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
-		"ytdl-core": "^4.11.5",
 		"zod": "^3.24.2"
 	},
 	"bugs": {
@@ -46,13 +47,15 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.8",
-		"@types/express": "^5.0.0",
+		"@types/express": "^5.0.2",
+		"@types/fluent-ffmpeg": "^2.1.27",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^22.13.9",
 		"@types/pg": "^8.11.11",
 		"@types/supertest": "^6.0.3",
+		"@types/uuid": "^10.0.0",
 		"@types/validator": "^13.15.0",
-		"drizzle-kit": "^0.30.5",
+		"drizzle-kit": "^0.31.1",
 		"nodemon": "^3.1.9",
 		"rimraf": "^6.0.1",
 		"supertest": "^7.1.0",
