--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"lib": ["es6"],
 		"module": "commonjs",
 		"rootDir": ".",
-		"moduleResolution": "node10",
+		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"allowJs": true,
 		"outDir": "dist",
