--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
 		"target": "es2016",
 		"lib": ["es6"],
 		"module": "commonjs",
-		"rootDir": ".",
-		"moduleResolution": "node",
+		"rootDir": "./",
+		"moduleResolution": "node10",
 		"resolveJsonModule": true,
 		"allowJs": true,
 		"outDir": "dist",
@@ -14,6 +14,6 @@
 		"noImplicitAny": true,
 		"skipLibCheck": true
 	},
-	"include": ["*.ts", "**/*.ts"],
+	"include": ["*.ts", "**/*.ts, index.ts"],
 	"exclude": ["dist", "node_modules", "scripts"]
 }
