--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DATABASE_URL=postgresql://user:password@host:5432/dbname?sslmode=require
 # Server
 PORT=8000
 NODE_ENV=production
-ALLOWED_ORIGINS=https://youtube-transcribe-rho.vercel.app/
+ALLOWED_ORIGINS=https://youtube-transcribe-rho.vercel.app
 
 # Authentication
 JWT_SECRET=your_jwt_secret_key_here
