--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "sample-server",
 	"version": "1.0.0",
 	"description": "Sample Server",
-	"main": "index.ts",
+	"main": "index.js",
 	"scripts": {
-		"start": "npm run build && node index.ts",
+		"start": "npm run build && node dist/index.js",
 		"dev": "nodemon index.ts",
 		"build": "rimraf dist && tsc",
 		"db:check": "drizzle-kit check",
@@ -22,6 +22,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@distube/ytdl-core": "^4.16.10",
+		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"@types/multer": "^1.4.12",
 		"@xenova/transformers": "^2.17.2",
 		"bcrypt": "^5.1.1",
