--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 	"author": "Matthew Adebayo",
 	"license": "ISC",
 	"dependencies": {
-		"@distube/ytdl-core": "^4.16.10",
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"@types/multer": "^1.4.12",
 		"@xenova/transformers": "^2.17.2",
@@ -39,6 +38,7 @@
 		"pg": "^8.13.3",
 		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
+		"youtube-dl-exec": "^3.0.21",
 		"zod": "^3.24.2"
 	},
 	"bugs": {
