--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"pg": "^8.13.3",
 		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
+		"wav": "^1.0.2",
 		"youtube-dl-exec": "^3.0.21",
 		"zod": "^3.24.2"
 	},
@@ -56,6 +57,7 @@
 		"@types/supertest": "^6.0.3",
 		"@types/uuid": "^10.0.0",
 		"@types/validator": "^13.15.0",
+		"@types/wav": "^1.0.4",
 		"drizzle-kit": "^0.31.1",
 		"nodemon": "^3.1.9",
 		"rimraf": "^6.0.1",
