--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Sample Server",
 	"main": "index.js",
 	"scripts": {
-		"start": "npm run build && node dist/index.js",
+		"start": "npm run build && node --expose-gc dist/index.js",
 		"dev": "nodemon index.ts",
 		"build": "rimraf dist && tsc && cp cookies.txt dist/",
 		"db:check": "drizzle-kit check",
@@ -36,6 +36,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.2",
 		"pg": "^8.13.3",
+		"puppeteer": "^23.0.0",
 		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
 		"wav": "^1.0.2",
