--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
 		"wav": "^1.0.2",
+		"wavefile": "^11.0.0",
 		"youtube-dl-exec": "^3.0.21",
 		"zod": "^3.24.2"
 	},
