--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"db:migrate": "drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio",
 		"test": "vitest run",
-		"test:watch": "vitest"
+		"test:watch": "vitest",
+		"postinstall": "npx playwright install"
 	},
 	"keywords": [
 		"Premeee"
