--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "Sample Server",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
 		"start": "npm run build && node --expose-gc dist/index.js",
 		"dev": "nodemon index.ts",
@@ -34,12 +35,11 @@
 		"ffmpeg": "^0.0.4",
 		"ffmpeg-static": "^5.2.0",
 		"fluent-ffmpeg": "^2.1.3",
+		"googleapis": "^149.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.2",
 		"node-cron": "^4.0.7",
 		"pg": "^8.13.3",
-		"playwright": "^1.52.0",
-		"puppeteer": "^23.0.0",
 		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
 		"wav": "^1.0.2",
